--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,5 +87,73 @@ services:
         tail -f /opt/ranger/admin/ews/logs/*.log
       "
 
+  minio:
+    image: minio/minio:RELEASE.2025-04-22T22-12-26Z
+    container_name: minio
+    hostname: minio.example.com
+    networks:
+      - rangernw
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      - MINIO_ROOT_USER=admin
+      - MINIO_ROOT_PASSWORD=password
+      - MINIO_SERVER_URL=http://minio:9000
+      - MINIO_BROWSER_REDIRECT_URL=http://localhost:9001
+    volumes:
+      - minio_data:/data
+    command: server /data --console-address ":9001"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+
+  gateway:
+    build:
+      context: ./full-stack-fastapi-template/backend
+    container_name: minio-ranger-gateway
+    hostname: gateway.example.com
+    networks:
+      - rangernw
+    ports:
+      - "8000:8000"
+    depends_on:
+      ranger-admin:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
+    environment:
+      # Ranger configuration
+      - RANGER_HOST=http://ranger-admin:6080
+      - RANGER_USER=admin
+      - RANGER_PASSWORD=rangerR0cks!
+      - RANGER_SERVICE_NAME=minio-service
+      - RANGER_CACHE_TTL=300
+      # MinIO configuration
+      - MINIO_ENDPOINT=http://minio:9000
+      - MINIO_ROOT_USER=admin
+      - MINIO_ROOT_PASSWORD=password
+      # FastAPI settings (minimal for gateway - no DB needed)
+      - PROJECT_NAME=MinIO-Ranger Gateway
+      - API_V1_STR=/api/v1
+      - ENVIRONMENT=local
+      - SECRET_KEY=changethis
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/api/v1/utils/health-check/"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+    command: >
+      sh -c "
+      python app/init_ranger.py &&
+      fastapi run --host 0.0.0.0 --port 8000 app/main.py
+      "
+
+volumes:
+  minio_data:
+
 networks:
   rangernw:
