--- a/full-stack-fastapi-template/backend/pyproject.toml
+++ b/full-stack-fastapi-template/backend/pyproject.toml
@@ -23,6 +23,9 @@ dependencies = [
     "pyjwt<3.0.0,>=2.8.0",
     "cachetools<6.0.0,>=5.3.0",
     "requests (>=2.32.5,<3.0.0)",
+    "jwt (>=1.4.0,<2.0.0)",
+    "redis (>=7.1.0,<8.0.0)",
+    "boto3 (>=1.41.2,<2.0.0)",
 ]
 
 [tool.uv]
