--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  zookeeper:
+  ranger-zk:
     image: apache/ranger-zk:2.7.0
     container_name: ranger-zk
     hostname: ranger-zk.example.com
@@ -10,10 +10,11 @@ services:
     ports:
       - "2181:2181"
     healthcheck:
-      test: ["CMD-SHELL", "echo mntr | nc localhost 2181 | grep ZooKeeper"]
-      interval: 10s
-      timeout: 2s
+      test: [ "CMD", "sh", "-c", "nc -z localhost 2181 || exit 1" ]
+      interval: 5s
+      timeout: 5s
       retries: 30
+      start_period: 10s
 
   ranger-solr:
     image: apache/ranger-solr:2.7.0
@@ -24,14 +25,14 @@ services:
     ports:
       - "8983:8983"
     depends_on:
-      zookeeper:
+      ranger-zk:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8983/solr || exit 1"]
+      test: ["CMD-SHELL", "curl -sf http://localhost:8983/solr || exit 1"]
       interval: 10s
-      timeout: 2s
+      timeout: 5s
       retries: 30
-      start_period: 15s
+      start_period: 20s
     command: ["sh", "-c", "solr-precreate ranger_audits /opt/solr/server/solr/configsets/ranger_audits/ && tail -f /dev/null"]
 
   ranger-db:
@@ -43,8 +44,9 @@ services:
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
-      timeout: 2s
+      timeout: 5s
       retries: 30
+      start_period: 20s
 
   ranger-admin:
     image: apache/ranger:2.7.0
@@ -71,13 +73,13 @@ services:
         condition: service_healthy
       ranger-solr:
         condition: service_healthy
-      zookeeper:
+      ranger-zk:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:6080 || exit 1"]
+      test: ["CMD-SHELL", "curl -sf http://localhost:6080 || exit 1"]
       interval: 30s
       timeout: 10s
-      retries: 15
+      retries: 20
       start_period: 180s
     command: >
       sh -c "
@@ -118,7 +120,18 @@ services:
       - rangernw
     ports:
       - "6379:6379"
-    command: redis-server --appendonly yes --requirepass redispass123
+    command: >
+      redis-server
+      --appendonly yes
+      --appendfsync everysec
+      --save 900 1
+      --save 300 10
+      --save 60 10000
+      --requirepass redispass123
+      --dir /data
+      --dbfilename dump.rdb
+      --maxmemory 1gb
+      --maxmemory-policy allkeys-lru
     volumes:
       - redis_data:/data
     healthcheck:
@@ -129,7 +142,7 @@ services:
 
   gateway:
     build:
-      context: ./full-stack-fastapi-template/backend
+      context: ./backend
     container_name: minio-ranger-gateway
     hostname: gateway.example.com
     networks:
@@ -171,27 +184,8 @@ services:
       fastapi run --host 0.0.0.0 --port 8000 app/main.py
       "
 
-  quickwit:
-    image: quickwit/quickwit:latest
-    container_name: quickwit
-    ports:
-      - "7280:7280"  # UI и REST API
-    environment:
-      - QW_ENABLE_OPENTELEMETRY=false
-      - QW_CLUSTER_ID=quickwit-docker-cluster
-    volumes:
-      - quickwit_data:/quickwit/data
-      - ./qwdata:/quickwit/qwdata
-    command: run
-    healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:7280/health" ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
 volumes:
   minio_data:
-  quickwit_data:
   redis_data:
 
 networks:
