--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "requests (>=2.32.5,<3.0.0)",
     "redis (>=7.1.0,<8.0.0)",
     "boto3 (>=1.41.2,<2.0.0)",
+    "colorlog (>=6.10.1,<7.0.0)",
 ]
 
 [tool.uv]
